--- a/style.css
+++ b/style.css
@@ -8,12 +8,16 @@ font-family: 'Poppins', sans-serif;
 
 /* header css */
 .header{
-display: flex;
-align-items: center;
-justify-content: space-between;
 padding: 10px 20px;
 background: #0900ec;
 }
+.header-logo-and-menu{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+
+    }
 a.h-logo {
 text-decoration: none;
 color: #fff;
@@ -86,4 +90,108 @@ justify-items: center;
 }
 .web-section img {
 width: 87px;
+}
+
+/* popular collection section css */
+section.collection-section {
+    padding: 60px 0;
+}
+h2.popular-collection-heading {
+    text-align: center;
+    font-size: 28px;
+    margin-bottom: 40px;
+}
+.collections{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    row-gap: 30px;
+}
+.collection-item {
+    padding: 19px;
+    box-shadow: 0px 0px 15px -8px #000;
+    border-radius: 16px;
+}
+h2.collection-heading {
+    font-size: 28px;
+    font-weight: 500;
+}
+h3.price {
+    font-size: 24px;
+    font-weight: 400;
+}
+.ratings{
+    display: flex;
+}
+i.fa-solid.fa-star,i.fa-regular.fa-star-half-stroke {
+    color: #FB8200;
+    font-size: 14px;
+}
+.r-text {
+    font-size: 14px;
+    color: #5E6366;
+    margin-left: 8px;
+    line-height: 29px;
+}
+p.c-description {
+    font-size: 15px;
+}
+
+/* feature section css */
+section.ferature-product {
+    padding: 0px 0 50px 0;
+    background: #ffffff;
+}
+.ferature-product{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.feature-thumbnail {
+    width: 40%;
+}
+.feature-deatails {
+    width: 55%;
+}
+.feature-deatails h1 {
+    font-size: 38px;
+}
+.feature-deatails p {
+    font-size: 16px;
+    color: #6C6C6C;
+    font-weight: 500;
+}
+a.feature-btn {
+    background: #E02C6D;
+    padding: 13px 31px;
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 18px;
+}
+i.fa-sharp.fa-solid.fa-arrow-right {
+    margin-left: 6px;
+}
+/* Footer css */
+footer {
+    background: black;
+    color: #fff;
+    padding: 50px 0;
+    text-align: center;
+}
+h1.footer-heading {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+p.copy-right {
+    font-size: 14px;
+    font-weight: 100;
+    margin-bottom: 10px;
+}
+.social-icon i {
+    font-size: 21px;
+    padding: 0 10px;
+    margin-top: 10px;
+    color: #fff;
 }
